--- a/addstatic/index.html
+++ b/addstatic/index.html
@@ -123,7 +123,8 @@
 						</tr>
 					</thead>
 				
-					<tbody>
+					<tbody id = "classoutput">
+						<!---
 						<?php
 							
 							$name = $_POST['name'];
@@ -188,6 +189,7 @@
 							}
 						}
 					?>
+					-->
 					</tbody>
 				</table>
 			</div>
