clarify some options on front

--- a/addstatic/index.html
+++ b/addstatic/index.html
@@ -46,7 +46,7 @@
 						<label class = "col-lg-2 control-label">Subject</label>
 						<div class = "col-lg-4">
 							<select class = "subject" class = "form-control" name = "subject">
-								<option value = "">Select</option>
+								<option value = "">None</option>
 								<option value = "CIS">CIS</option>
 								<option value = "ESC">ESC</option>
 								<option value = "EEC">EEC</option>
@@ -69,7 +69,7 @@
 						<label class = "col-lg-2 control-label">Tag</label>
 						<div class = "col-lg-4">
 							<select class = "tag" name = "tag">
-								<option value = "">Select</option>
+								<option value = "">None</option>
 								<option value = "WAC">Writing Across the Curriculum</option>
 								<option value = "CC">Core Choice</option>
 								<option value = "TE">Technical Elective</option>
